# GameServer

./: .gitignore  .gitmodules  CMakeLists.txt  GameServer.sln  GroupCommon.cpp  GroupCommon.h  README.md  packages.config  vcpkg.json
.github/: pull_request_template.md
GameServer/: .gitignore  AttackData.cpp  AttackData.h  AttackManager.h  ChatCharacter.cpp  ChatCharacter.h  DBData.h  DBSetting.txt  DBThreadWrapper.cpp  DBThreadWrapper.h  EasyMonsterGroup.cpp  EasyMonsterGroup.h  FieldObjectManager.cpp  FieldObjectManager.h  GameDataLoader.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  GameServer.vcxproj  GameServer.vcxproj.filters  GameSettings.txt  GroupCommon.cpp  GroupCommon.h  HardMonsterGroup.cpp  HardMonsterGroup.h  Item.cpp  Item.h  MonitorClient.cpp  MonitorClient.h  MonitorProtocol.h  Monster.cpp  MyDebug.natvis  ObjectManager.cpp  ObjectManager.h  PVPGroup.cpp  PVPGroup.h  Player.cpp  Player.h  PveAttackManager.cpp  (+20 more)
GameServer/Base/: Attack.cpp  Attack.h  AttackData.h  AttackManager.cpp  ChatCharacter.cpp  ChatCharacter.h  DBThreadWrapper.cpp  DBThreadWrapper.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Monster.cpp  Monster.h  ObjectManager.cpp  ObjectManager.h  Player.cpp  Player.h  Rand.h  Range.cpp  Range.h
GameServer/Data/: AttackData.h  DBData.cpp  DBData.h  GameDataLoader.h  Item.h  MockData.h  TableData.h
GameServer/Group/: EasyMonsterGroup.cpp  EasyMonsterGroup.h  FieldObjectManager.cpp  FieldObjectManager.h  GroupCommon.cpp  GroupCommon.h  HardMonsterGroup.cpp  HardMonsterGroup.h  LoginGroup.cpp  LoginGroup.h  PVPGroup.cpp  PVPGroup.h  PveAttackManager.cpp  PveAttackManager.h  VillageGroup.cpp  VillageGroup.h
GameServer/MapPerfomaceTest/: DirectQuadTree.cpp  DirectQuadTree.h  IGameObjectContainer.cpp  NormalQuadTree.h
GameServer/MapPerformanceTest/: DirectQuadTree.cpp  DirectQuadTree.h  IGameObjectContainer.cpp  IGameObjectContainer.h  NormalQuadTree.cpp  NormalQuadTree.h
src/: AiComponent.cpp  AiComponent.h  AttackData.cpp  AttackData.h  CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  ChatCharacter.cpp  ChatCharacter.h  DBData.cpp  DBData.h  DBThreadWrapper.cpp  DBThreadWrapper.h  DatabaseManager.cpp  DatabaseManager.h  Field.cpp  Field.h  FieldData.h  GameDataLoader.cpp  GameDataLoader.h  GameMap.h  GameObject.cpp  GameObject.h  IVictimSelect.cpp  IVictimSelect.h  IdTypes.h  MockData.h  MonitorProtocol.h  Monster.cpp  Monster.h  MonsterAi.cpp  MonsterAi.h  MonsterSpawner.cpp  MonsterSpawner.h  MoveComponent.cpp  MoveComponent.h  Player.cpp  Player.h  Rand.h  Range.cpp  (+14 more)
